# guardian

./: .gitignore  FILES.md  README.md  codemagic.yaml  pubspec.yaml  render.yaml
apps/backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_endpoints.sh
apps/backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_refresh_sessions.sql  20240601000001_create_circles.sql  20240601000002_create_circle_memberships.sql  20240601000003_create_invite_tokens.sql  20240601000004_create_device_tokens.sql  20240601000005_create_user_sessions.sql  20240601000006_add_preferences_to_users.sql  20240701000001_create_member_locations.sql  20240701000002_create_sos_broadcasts.sql  20240701000003_add_battery_and_connectivity_to_locations.sql  20240701000004_create_notifications.sql  20240801000001_split_notification_preferences.sql
apps/backend/src/: bootstrap.rs  main.rs
apps/backend/src/config/: mod.rs
apps/backend/src/domains/: mod.rs
apps/backend/src/domains/admin/: mod.rs
apps/backend/src/domains/analytics/: mod.rs
apps/backend/src/domains/audit/: mod.rs
apps/backend/src/domains/billing/: mod.rs
apps/backend/src/domains/blockchain_audit/: mod.rs
apps/backend/src/domains/circles/: mod.rs
apps/backend/src/domains/device_recovery/: mod.rs
apps/backend/src/domains/geofencing/: mod.rs
apps/backend/src/domains/journey/: mod.rs
apps/backend/src/domains/location/: mod.rs
apps/backend/src/domains/notifications/: mod.rs  service.rs
apps/backend/src/domains/smart_alerts/: mod.rs
apps/backend/src/domains/sos/: mod.rs
apps/backend/src/domains/subscriptions/: mod.rs
apps/backend/src/domains/support/: mod.rs
apps/backend/src/domains/users/: mod.rs
apps/backend/src/infrastructure/: mod.rs
apps/backend/src/infrastructure/analytics/: mod.rs
apps/backend/src/infrastructure/blockchain/: mod.rs
apps/backend/src/infrastructure/cache/: mod.rs  otp_store.rs
apps/backend/src/infrastructure/database/: mod.rs
apps/backend/src/infrastructure/jobs/: mod.rs
apps/backend/src/modules/: mod.rs
apps/backend/src/modules/auth/: mod.rs  (+1 more)
apps/backend/src/routes/: auth.rs  mod.rs
apps/backend/src/shared/: mod.rs
apps/backend/src/websocket/: connection_manager.rs  location_stream.rs  mod.rs  presence_stream.rs  sos_stream.rs
apps/backend/src/workers/: analytics_worker.rs  audit_worker.rs  blockchain_worker.rs  geofence_worker.rs  mod.rs  notification_worker.rs
(+797 files in other folders)
