[package]
name = "guardian-backend"
version = "2.0.0"
edition = "2021"

[dependencies]
# ── Web Framework ────────────────────────────────────────────
axum        = { version = "0.8", features = ["macros", "multipart"] }
axum-extra  = { version = "0.10", features = ["multipart"] }
tower-http  = { version = "0.6", features = ["cors", "trace", "fs"] }
tower       = "0.5"

# ── Database ─────────────────────────────────────────────────
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "uuid",
  "macros",
] }

# ── Serialization ─────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Auth / Crypto ─────────────────────────────────────────────
jsonwebtoken  = "9"
argon2        = "0.5"
password-hash = "0.5"
uuid          = { version = "1", features = ["v4", "serde"] }
sha2          = "0.10"
hex           = "0.4"

# ── Time ──────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Async / Runtime ───────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
rand  = "0.8"
dotenvy = "0.15"

# ── Observability ─────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error Handling ────────────────────────────────────────────
thiserror = "1"
anyhow       = "1"
async-trait  = "0.1"
reqwest = { version = "0.13.4", features = ["json"] }
firebase-auth = "0.5.1"
base64 = "0.22.1"
hmac = "0.12"
tracing-axiom = "0.7.0"
